--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.4.0",
+        "@vuelidate/core": "^2.0.3",
+        "@vuelidate/validators": "^2.0.4",
         "lodash": "^4.17.21",
         "toastr": "^2.1.4",
         "vue": "^3.2.36",
