--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
         "@vuelidate/core": "^2.0.3",
         "@vuelidate/validators": "^2.0.4",
         "lodash": "^4.17.21",
+        "select2": "^4.1.0-rc.0",
         "toastr": "^2.1.4",
         "vue": "^3.2.36",
         "vue-loader": "^17.3.1",
-        "vue-router": "^4.0.13"
+        "vue-router": "^4.0.13",
+        "vuex": "^4.0.2",
+        "vuex-persistedstate": "^4.1.0"
     }
 }
