--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-loader": "^17.3.1",
         "vue-router": "^4.0.13",
         "vuex": "^4.0.2",
+        "vuex-persist": "^3.1.3",
         "vuex-persistedstate": "^4.1.0"
     }
 }
