--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
         "@vitejs/plugin-vue": "^4.4.0",
         "@vuelidate/core": "^2.0.3",
         "@vuelidate/validators": "^2.0.4",
+        "datatables.net-select": "^1.7.0",
+        "datatables.net-vue3": "^2.1.3",
         "lodash": "^4.17.21",
         "select2": "^4.1.0-rc.0",
         "toastr": "^2.1.4",
         "vue": "^3.2.36",
         "vue-loader": "^17.3.1",
         "vue-router": "^4.0.13",
+        "vue3-easy-data-table": "^1.5.47",
         "vuex": "^4.0.2",
         "vuex-persist": "^3.1.3",
         "vuex-persistedstate": "^4.1.0"
