--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "datatables.net-vue3": "^2.1.3",
         "lodash": "^4.17.21",
         "select2": "^4.1.0-rc.0",
+        "sweetalert2": "^11.9.0",
         "toastr": "^2.1.4",
         "vue": "^3.2.36",
         "vue-loader": "^17.3.1",
