--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@vuelidate/validators": "^2.0.4",
         "datatables.net-select": "^1.7.0",
         "datatables.net-vue3": "^2.1.3",
+        "laravel-permission-to-vuejs": "^3.0.1",
         "lodash": "^4.17.21",
         "select2": "^4.1.0-rc.0",
         "sweetalert2": "^11.9.0",
